--- a/Blackout/Blackout.css
+++ b/Blackout/Blackout.css
@@ -1,5 +1,5 @@
 /***** BLACKOUT *****|
- v0.11.0            *|
+ v0.12.0            *|
  a list design      *|
  by Valerio Lyndon  */
 
@@ -540,104 +540,84 @@ a:hover,
 	display: flex;
 	width: auto;
 	height: auto;
+	align-items: center;
 	border: none;
 	transform: translateX(-50%);
 }
 
-.list-menu-float .icon-menu {
-	width: 14rem !important;
-	height: 12.13rem;
-	background: linear-gradient(135deg, var(--b1), var(--b2));
-	margin-right: -4rem;
-	clip-path: polygon(50% 100%, 100% 0, 0 0);
-	transition-property: margin-right, opacity, transform;
-	transition-duration: 0.24s, 0.24s, 0.15s;
-	transition-timing-function: ease;
-	transition-delay: 0s;
-}
-.list-menu-float .icon-menu:nth-of-type(even),
-.list-menu-float :nth-of-type(odd) + form .icon-menu {
-	clip-path: polygon(50% 0, 100% 100%, 0 100%);
-}
-.list-menu-float .icon-menu:hover {
-	transform: scale(1.2);
-}
-
-.list-menu-float:not(:hover) .icon-menu:not(.profile) {
-	opacity: 0;
-	margin-right: -14rem;
-	transition-delay: .7s, .7s, 0s;
-}
-
-.list-menu-float .icon-menu:not(.profile)::before {
+.list-menu-float::before {
 	content: "";
-	position: absolute;
-	top: .3rem;
-	left: .5rem;
-	width: calc(100% - 1rem);
-	height: calc(100% - 1rem);
-	background: var(--f2);
-	clip-path: inherit;
+	display: block;
+	width: 5rem;
+	height: 4.3334rem;
+	margin-top: 1rem;
+	background: var(--t2);
+/* 	clip-path: polygon(50% 0, 100% 100%, 0 100%); */
+	clip-path: polygon(50% 100%, 100% 0, 0 0);
+	transition:
+		background-color 0.2s ease-out,
+		opacity 0.2s ease-out;
 }
-.list-menu-float .icon-menu:nth-of-type(even)::before,
-.list-menu-float :nth-of-type(odd) + form .icon-menu::before {
-	top: .7rem;
+.list-menu-float:hover::before {
+	opacity: .5;
+	background: var(--l);
 }
 
-.list-menu-float .icon-menu svg.icon {
-	left: var(--lf) !important;
-	top: var(--tp) !important;
-	width: var(--sz);
-	height: auto;
-	fill: var(--t);
-	transform: scale(0.8) translate(1.25rem, -2rem);
+.list-menu-float .icon-menu {
+	display: flex;
+	width: 5rem !important;
+	height: 8rem;
+	margin-left: -5rem;
+	background: none !important;
+	align-items: center;
+	line-height: 1;
+	transition:
+		margin-left 0.2s ease-out,
+		opacity 0.2s ease-out;
+	opacity: 0;
 }
-.list-menu-float .icon-menu:hover svg.icon {
+.list-menu-float:hover .icon-menu {
+	margin-left: 2rem;
+	opacity: 1;
+}
+
+.list-menu-float .icon-menu svg.icon,
+.list-menu-float .icon-menu.profile::before {
+	position: static !important;
+	fill: var(--t2);
+	flex: 0 0 auto;
+	font-weight: bold;
+	font-size: 5rem;
+	content: "\f007 ";
+}
+.list-menu-float .icon-menu:hover svg.icon,
+.list-menu-float .icon-menu.profile:hover::before {
 	fill: var(--l);
 }
-.list-menu-float .icon-menu:nth-of-type(even) svg.icon,
-.list-menu-float :nth-of-type(odd) + form .icon-menu svg.icon {
-	transform: scale(0.8) translate(1.25rem, 2rem);
+
+.list-menu-float .icon-menu .text,
+.list-menu-float .icon-menu.profile::after {
+	position: absolute;
+	left: 50%;
+	top: 100%;
+	color: var(--t2);
+	text-transform: uppercase;
+	width: 0rem !important;
+	overflow: hidden;
+	font-size: 4rem;
+	letter-spacing: .1em;
+	transition: width 0.2s ease-out;
+	opacity: 1;
+	transform: translateX(-50%);
+	pointer-events: none;
+}
+.list-menu-float .icon-menu:hover .text,
+.list-menu-float .icon-menu.profile:hover::after {
+	width: 30rem !important;
 }
 
-svg.icon-quick-add {
-	--lf: 3.25rem;
-	--tp: 3rem;
-	--sz: 5.5rem;
-}
-svg.icon-anime-list {
-	--lf: 3.25rem;
-	--tp: 3rem;
-	--sz: 5.5rem;
-}
-svg.icon-manga-list {
-	--lf: 3.25rem;
-	--tp: 3rem;
-	--sz: 5.5rem;
-}
-svg.icon-history {
-	--lf: 3.25rem;
-	--tp: 3rem;
-	--sz: 5.25rem;
-}
-svg.icon-export {
-	--lf: 3.75rem;
-	--tp: 3rem;
-	--sz: 5rem;
-}
-svg.icon-logout {
-	--lf: 3.25rem;
-	--tp: 3.5rem;
-	--sz: 5rem;
-}
-svg.icon-setting {
-	--lf: 3.25rem;
-	--tp: 3.25rem;
-	--sz: 5.25rem;
-}
-
-.list-menu-float .text {
-	display: none !important;
+.list-menu-float .icon-menu.profile::after {
+	content: "Profile";
 }
 
 /* @media (min-width: 1280px) {
@@ -772,10 +752,12 @@ tbody:hover .list-table-header {
 	left: auto;
 	right: 4rem;
 	width: auto;
+	height: 8rem;
 	display: flex;
 	align-items: center;
 	background: none;
 	font-size: 0;
+	line-height: 1;
 }
 
 .header .header-title::before,
