Clarity R27.4 Remove Notes
Disable new notes column. It doesn't play nicely with the current theme and adding support would require breaking lots of people's lists or adding very over the top styling such as hover menus.

Thus, any future support for the notes column will be relegated to mods.

--- a/Clarity Theme/Theme.css
+++ b/Clarity Theme/Theme.css
@@ -1,6 +1,6 @@
 /*==============================*\
   "Clarity" by Valerio Lyndon
-  R27.3
+  R27.4
 
 | == = == THEME CONTENTS == = == |
 
@@ -1423,6 +1423,9 @@ i.fa-chart-column::before {
 .icon-watch, /* legacy selector, just in case it's still needed */
 .icon-watch2 {
 	 display: none !important;
+}
+.notes {
+	display: none;
 }
 
 
