--- a/Agile Theme/Agile.css
+++ b/Agile Theme/Agile.css
@@ -1,17 +1,7 @@
 /* 
 "Agile" by Valerio Lyndon
 name subject to change.
-v0.10.0
-
-This layout is not a final product.
-
-Primary goals:
-- Simple to use, information is arranged with as much logic as possible.
-- Usable on vertical (or small) monitors
-
-Todo:
-- Consider hiding genres on non-PTW items.
-- fix fancyboxes
+v0.10.1
 */
 
 #grand_totals,
@@ -24,10 +14,7 @@ Todo:
 
 html {
 	--c-primary: #211d23;
-/* 	--c-shadow: #572102; */
 	--c-shadow: #0b0208;
-/* 	--c-button: #680a15; */
-/* 	--c-button: #a980af; */
 	--c-button: var(--c-subtle);
 	--c-subtle: #503b4a;
 	--c-subtle-red: #603b3a;
@@ -36,17 +23,14 @@ html {
 	--c-subtext: #a39fab;
 	
 	--gr-background: linear-gradient(160deg, #302b3a, #211d23, #1f141e);
-	--gr-burner: linear-gradient(160deg, #f8f8a7 -15rem, #ebdc06af, #c86102f0, #d66a0888, #c86102, #6f2c07);
-/* 	--gr-conic: conic-gradient(#a980af, white 25%, #302b3a, #302b3a 90%, #a980af); */
 	
 	--s-width: 1030rem;
 	--s-banner-height: calc(200rem + 15vw);
 	
-/* 	bounce cubic-bezier(.42,0,.58,1.25) */
+	--background: url(https://files.catbox.moe/o1gsha.jpg);
+	--cover: url(https://files.catbox.moe/01j1v8.jpg);
+	--avatar: url(https://files.catbox.moe/66eklm.png);
 	
-/* 	font: 14px Microsoft Sans Serif;
-	font: 14px Trebuchet MS;
-	font: 13px Arial; */
 	font: 1px Tahoma, FontAwesome, Arial, Helvetica, sans-serif;
 	
 	box-sizing: border-box;
@@ -82,17 +66,7 @@ html {
 }
 
 body {
-	background: #16120b;
-/* 	background:
-		linear-gradient(
-			97deg,
-			#431015ef 33%,
-			#661619fa 80%,
-			#4a1315df
-		) fixed,
-		url(https://files.catbox.moe/xm4y22.jpg) no-repeat left / cover fixed,
-		#661619; */
-	background: url(https://files.catbox.moe/o1gsha.jpg) no-repeat center / cover fixed #651517;
+	background: var(--background) no-repeat center / cover fixed #651517;
 	color: var(--c-text);
 	font-size: 13rem;
 }
@@ -111,23 +85,12 @@ a {
 
 /* COVER */
 
-@keyframes banner {
-	0%, 80%, 80.15%, 80.4%, 80.7%, 85%, 85.6%, 100% {
-		filter: invert(0);
-	}
-	80.1%, 80.5%, 80.9%, 84.9%, 85.15% {
-		filter: invert(1);
-	}
-}
-
 body::before {
 	content: "";
 	display: block;
 	width: 100%;
 	height: var(--s-banner-height);
-	background: url(https://files.catbox.moe/01j1v8.jpg) center / cover no-repeat #020202;
-/* 	animation: 300s steps(1) banner infinite; */
-/* 	filter: invert(1) brightness(0.8) contrast(200%); */
+	background: var(--cover) center / cover no-repeat #020202;
 }
 
 /* HEADER */
@@ -145,7 +108,6 @@ table#mal_control_strip {
 
 #mal_control_strip tbody {
 	position: relative;
-	/*! z-index: 0; */
 	display: block;
 	width: var(--s-width);
 	height: 100%;
@@ -187,11 +149,8 @@ html {
 	content: "";
 	position: absolute;
 	background: #0b0208aa;
-/* 	border-radius: 0 5rem 44rem 0 / 0 18rem 44rem 0; */
 	border-radius: 6rem;
 	box-shadow: inset 0 0 2px var(--c-subtext);
-/* 	transform: skewX(25deg);
-	transform-origin: right bottom; */
 } #mal_cs_listinfo div:last-of-type::before,
 #mal_cs_pic::before {
 	top: -1rem;
@@ -207,11 +166,8 @@ html {
 	width: var(--s-header-r-width);
 	height: 34rem;
 	background: #0b0208aa;
-/* 	border-radius: 44rem 5rem 44rem 5rem / 44rem 18rem 44rem 18rem; */
 	border-radius: 6rem;
 	box-shadow: inset 0 0 2px var(--c-subtext);
-/* 	transform: skewX(25deg);
-	transform-origin: right bottom; */
 } #mal_cs_pic::after {
 	--s-header-r-width: 76rem;
 }
@@ -239,7 +195,6 @@ table#mal_control_strip a {
 	text-decoration: none;
 	font: inherit;
 } table#mal_control_strip a:hover {
-/* 	color: var(--c-text-hover); */
 	text-decoration: underline;
 }
 
@@ -260,7 +215,7 @@ a[href="/forum/?board=515949"] {
 	width: 90rem;
 	height: 100rem;
 	padding: 45rem 0 0 90rem;
-	background: url(https://files.catbox.moe/66eklm.png) no-repeat 0 5rem / 100% auto;
+	background: var(--avatar) no-repeat 0 5rem / 100% auto;
 	border-radius: 0 0 50% 50%;
 	font-size: 20rem;
 	line-height: 20rem;
@@ -344,8 +299,6 @@ a[href="/register.php"]::before {
 }
 #mal_cs_links a[href^="/mangalist/"]::before,
 #mal_cs_otherlinks a[href^="/mangalist/"]::before {
-/* 	content: "\f02d  "; */
-/* 	content: "\f5db  "; */
 	content: "\e0c0  ";
 	font-weight: 600;
 }
@@ -362,8 +315,6 @@ a[href="/register.php"]::before {
 	font-size: 0;
 }
 #mal_cs_links a[href^="/animelist/"]::before {
-/* 	content: "\f03a  My List"; */
-/* 	content: "\f144  My List"; */
 	content: "\f02e  My List";
 	font-size: 13rem;
 }
@@ -475,7 +426,6 @@ td#mal_cs_powered {
 
 [class^="status_"] {
 	position: relative;
-	/*! z-index: -1; */
 	display: flex;
 	width: auto;
 	height: 100%;
@@ -525,7 +475,6 @@ table[class^="header_"] {
 	display: block;
 	width: var(--s-width);
 	margin: 0 auto;
-/* 	opacity: 0.3334; */
 }
 
 [class^="header_"] span {
@@ -534,7 +483,6 @@ table[class^="header_"] {
 	-webkit-background-clip:text;
 	background-clip: text;
 	color: transparent;
-/* 	text-transform: uppercase; */
 	letter-spacing: 2rem;
 	font-size: 32rem;
 	font-weight: bold;
@@ -568,19 +516,15 @@ table[class^="header_"] {
 }
 .header_completed tbody::before {
 	content: "\f00c";
-/* 	font-weight: 600; */
 }
 .header_onhold tbody::before {
 	content: "\f04c";
-/* 	font-weight: 600; */
 }
 .header_dropped tbody::before {
 	content: "\f00d";
-/* 	font-weight: 600; */
 }
 .header_ptw tbody::before {
 	content: "\f141";
-/* 	font-weight: 600; */
 }
 
 .category_totals {
@@ -591,7 +535,6 @@ table[class^="header_"] {
 
 table[class^="header_"] + table {
 	border: none !important;
-/* 	background: none !important; */
 	border-radius: 6rem 6rem 0 0;
 }
 
@@ -641,9 +584,6 @@ table ~ table:not([class]) tr {
 /* Forms */
 
 td input[type="text"] {
-/* 	position: absolute;
-	left: 0;
-	top: calc(50% - 13rem); */
 	width: 100%;
 	height: 26rem;
 	background: var(--gr-background);
@@ -667,8 +607,9 @@ td input[value="Go"] {
 [class^="td"][width="30"] {
 	position: absolute;
 	right: calc(100% + 6rem);
+	z-index: -1;
 	opacity: 0.3;
-	display: none; /* temp */
+	pointer-events: none;
 }
 
 /* Title */
@@ -764,13 +705,7 @@ div[style="float: right;"] [id^="xmenu"]::after {
 	flex-wrap: wrap;
 	order: -1;
 	justify-content: left;
-/* 	min-height: 58px;
-	align-items: center; */
 }
-
-/* a[title$="current score"] {
-	
-} */
 
 .score-label {
 	font-size: 0;
@@ -778,7 +713,6 @@ div[style="float: right;"] [id^="xmenu"]::after {
 
 .score-label::before,
 .score-label::after {
-/* 	color: #a14747; */
 	color: var(--c-subtext);
 	font-size: 10rem;
 	letter-spacing: 0.1em;
@@ -794,7 +728,6 @@ div[style="float: right;"] [id^="xmenu"]::after {
 	content: "\f006 \f006 \f006 \f006 \f006 ";
 }
 .score-1::before {
-	/* star f005, half star outline f123, half star f089, empty star f006  */
 	content: "\f5c0 ";
 } .score-2::before {
 	content: "\f005 ";
@@ -818,7 +751,6 @@ div[style="float: right;"] [id^="xmenu"]::after {
 	content: "\f005 \f005 \f005 \f005 \f005 ";
 }
 .score-1::after {
-	/* star f005, half star outline f123, half star f089, empty star f006  */
 	content: "\f006 \f006 \f006 \f006 ";
 } .score-2::after {
 	content: "\f006 \f006 \f006 \f006 ";
@@ -860,7 +792,7 @@ table.header_onhold ~ table [class^="td"][width="70"] {
 }
 .header_completed + table .table_header[width="70"],
 .header_completed ~ table [class^="td"][width="70"] {
-	width: 60rem; /* 56px without header */
+	width: 60rem;
 }
 
 [id^="epText"] {
@@ -927,7 +859,6 @@ form {
 
 /* Action */
 a[href$="&genre=1"]::before {
-/* 	content: "⚔ " */
 	content: "⚔️ "
 }
 /* Adventure */
@@ -957,7 +888,6 @@ a[href$="&genre=8"]::before {
 /* Ecchi & Erotica */
 a[href$="&genre=9"]::before,
 a[href$="&genre=49"]::before {
-/* 	content: "🌡" */
 	content: "💦"
 }
 /* Fantasy */
@@ -970,7 +900,6 @@ a[href$="&genre=26"]::before {
 }
 /* Gourmet */
 a[href$="&genre=47"]::before {
-/* 	content: "🍽" */
 	content: "🍤"
 }
 /* Hentai */
@@ -979,7 +908,6 @@ a[href$="&genre=12"]::before {
 }
 /* Horror */
 a[href$="&genre=14"]::before {
-/* 	content: "👻 " */
 	content: "😱 "
 }
 /* Mystery */
@@ -1004,8 +932,6 @@ a[href$="&genre=30"]::before {
 }
 /* Supernatural */
 a[href$="&genre=37"]::before {
-/* 	content: "🧙‍♂️ " */
-/* 	content: "✨" */
 	content: "👻 ";
 }
 /* Suspense */
@@ -1014,7 +940,6 @@ a[href$="&genre=41"]::before {
 }
 /* Work Life */
 a[href$="&genre=48"]::before {
-/* 	content: "🤵" */
 	content: "💼"
 }
 
@@ -1035,10 +960,6 @@ a[href$="&genre=48"]::before {
 	white-space: nowrap;
 	order: 5;
 }
-
-/* [class^="td"][width="90"]::before {
-	content: "\f133";
-} */
 
 [class^="td"][width="90"] + [width="90"] {
 	width: 58rem;
@@ -1073,9 +994,6 @@ a[href$="&genre=48"]::before {
 	margin-left: 2rem;
 	color: var(--c-subtext);
 }
-[class^="td"][width="45"][nowrap]:empty::before {
-	content: "test";
-}
 [class^="td"][width="45"][nowrap]::after {
 	content: ")";
 	margin-left: 1rem;
@@ -1093,10 +1011,7 @@ a[href$="&genre=48"]::before {
 /* MORE INFO */
 
 [id^="more"] {
-	
 	width: var(--s-width);
-/* 	width: calc(var(--s-width) - 50px); */
-	
 	padding: 0 72rem;
 	background: linear-gradient(160deg, #302b3abc, #211d23bc, #1f141ebc) fixed;
 	border-top: 2rem dotted var(--c-subtle-red);
@@ -1124,7 +1039,7 @@ table[class^="header_"] ~ table[class^="header_"]::before, #copyright::before {
 }
 
 #copyright::after {
-	content: "List design by Valerio Lyndon.";
+	content: '"Agile" list design by Valerio Lyndon.';
 }
 
 #recaptcha-terms {
@@ -1134,4 +1049,8 @@ table[class^="header_"] ~ table[class^="header_"]::before, #copyright::before {
 #copyright, #recaptcha-terms {
 	text-align: center;
 	cursor: default;
-} 
+}
+
+#fancybox-wrap {
+	box-sizing: content-box;
+}
